@@ -27,3 +27,13 @@ function getData(sheetName, options) { //eslint-disable-line no-unused-vars
 function getDataObject(sheetName, options) { //eslint-disable-line no-unused-vars
   throw new Error('このメソッドは直接呼び出せません。createメソッドで取得したインスタンスより呼び出してください。');
 }
+
+/**
+ * スプレッドシートのデータを配列形式で取得する
+ * @param {String} sheetName 【必須】シート名
+ * @param {Object} options 【任意】オプション
+ * @return {Object} 処理結果
+ */
+function getDataArray(sheetName, options) { //eslint-disable-line no-unused-vars
+  throw new Error('このメソッドは直接呼び出せません。createメソッドで取得したインスタンスより呼び出してください。');
+}
