@@ -1,1 +1,2 @@
 1 - 新規作成
+2 - getDataObjectメソッド、getDataArrayメソッドを追加
